# Projet-C

./: BigBinary.c  BigBinary.h  CMakeLists.txt  INSTRUCTIONS.txt  Makefile  README.md  exemples.c  main.c  tests.c
